remove rebulid frm package json for depolying takeing so much time

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postinstall": "npm rebuild"
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
