--- a/frontend/.rendertignore
+++ b/frontend/.rendertignore
@@ -1,3 +1,14 @@
-frontend/node_modules
-backend/node_modules
-frontend/build
+FROM node:18-alpine
+
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+
+RUN cd frontend && npm install && npm run build
+RUN cd backend && npm install
+
+EXPOSE 3000
+CMD ["npm", "start"]
