--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,12 @@
 {
-  "name": "jwt-auth-frontend",
+  "name": "jwt-auth",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "npx react-scripts build"
+    "start": "node backend/server.js",
+    "build": "cd frontend && npm run build",
+    "install": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "serve": "^14.0.0"
   }
 }
