--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,29 @@
 {
-  "name": "jwt-auth",
+  "name": "jwt-auth-frontend",
   "version": "1.0.0",
-  "scripts": {
-    "start": "node backend/server.js",
-    "build": "cd frontend && npm run build",
-    "install": "npm install && cd frontend && npm install && cd ../backend && npm install"
-  },
+  "private": true,
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "serve": "^14.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
