--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "jwt-auth-frontend",
-  "version": "1.0.0",
+  "name": "authentication-with-jwt-frontend",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "serve": "^14.0.0"
+    "react-router-dom": "^6.21.3",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "npx react-scripts start",
-    "build": "npx react-scripts build",
-    "test": "npx react-scripts test",
-    "eject": "npx react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
