--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "serve": "^14.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "chmod +x node_modules/.bin/react-scripts"
+    "postinstall": "chmod +x node_modules/.bin/react-scripts",
+    "serve": "serve build"
   },
   "eslintConfig": {
     "extends": [
